# tapsilat-flutter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.github/: dependabot.yml
.github/workflows/: publish.yml
example/: pubspec.yaml  tapsilat_example.dart
example/lib/: main.dart
ios/: tapsilat.podspec
ios/tapsilat/: Package.swift
ios/tapsilat/Sources/tapsilat/: TapsilatPlugin.swift
lib/: tapsilat.dart  tapsilat_web.dart
linux/: CMakeLists.txt  tapsilat_plugin.cc
linux/include/tapsilat/: tapsilat_plugin.h
macos/: tapsilat.podspec
macos/tapsilat/: Package.swift
macos/tapsilat/Sources/tapsilat/: TapsilatPlugin.swift
test/: tapsilat_test.dart
windows/: CMakeLists.txt  tapsilat_plugin.cpp  tapsilat_plugin.h  tapsilat_plugin_c_api.cpp  tapsilat_plugin_c_api.h
